Brought back homepage title with correct font, added new font to menu, adjusted title font to be different from headerfont for readability, changed CSS to reflect header vars making use of uploaded open source font, making better choices around how the image and header overlap via CSS, along with how the seasons links work.

--- a/src/_sass/_variables.sass
+++ b/src/_sass/_variables.sass
@@ -1,3 +1,4 @@
+$small-mobile-width: 550px
 $mobile-width: 890px
 $large-mobile: 960px
 $ultra-large: 1336px
