--- a/src/_sass/css-vars.sass
+++ b/src/_sass/css-vars.sass
@@ -11,8 +11,8 @@
     --light-compound: #409DFF
     --dark-compound: #CCC014
     --font-reading: Arial, Helvetica, sans-serif
-    --title-font: "PhosphatePro-Solid", serif
-    --title-font-two: "Viafont", serif
+    --article-title-font: "PhosphatePro-Solid", serif
+    --title-font: "Viafont", serif
 
 @media (prefers-color-scheme: dark)
     :root
