--- a/src/_sass/nav.sass
+++ b/src/_sass/nav.sass
@@ -67,7 +67,7 @@
         padding: 0
         margin-left: 10px
         margin-bottom: 4px
-        font-family: "PhosphatePro-Solid", serif
+        font-family: var(--title-font)
         font-size: 24px
         line-height: 24px
         overflow: hidden
