--- a/src/_sass/template-post.sass
+++ b/src/_sass/template-post.sass
@@ -40,3 +40,7 @@ header
                 font-size: 20px
                 font-weight: bold
                 display: inline-block
+
+#template-post
+    h1.header
+        font-family: var(--article-title-font)
